--- a/assignment2/crstephenson/CMakeLists.txt
+++ b/assignment2/crstephenson/CMakeLists.txt
@@ -6,7 +6,7 @@ project(pleaseWork VERSION 0.1.0)
 #enable_testing()
 include_directories(src)
 file(GLOB SOURCES "src/*.cpp")
-add_executable(pleaseWork ${SOURCES}, ../dpgen.cpp)
+add_executable(pleaseWork ${SOURCES})
 
 #set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 #set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
